--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -1,20 +1,24 @@
 .weatherDataCont{
-  background-color: red;
-  width: 400px;
+  background-color: rgba(200, 200, 200, 0.5);
+  width:auto;
   height: 100px;
   line-height: 100px;
+  border-radius: 5px;
+  margin: 15px;
+  text-align: center;
 }
 
 .weatherTemperatureCont{
-  background-color: blue;
   width: 40%;
   display: inline-block;
 }
 
 .weatherExtraInfoCont{
-  background-color: green;
-  width: 60%;
+  background-color: inherit;
+  width: 100%;
   display: inline-block;
+  line-height: 25px;
+  text-align: center;
 }
 .temperature{
   font-size: 30px;
@@ -26,4 +30,15 @@
 .temperatureType{
   font-weight: bold;
   color: #666;
+}
+
+.extraInfoText{
+  display: block;
+  color: #1535C5;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.wicon{
+  color: rgb(255, 72, 0);
 }
